src/test/deca/context/valid/double_decl_field_var.deca
class A {
int x;
void method(int y){
int x=2;
y=x;
}
}