src/test/deca/context/invalid/method_field_same_name.deca
class A {
int method;
void method(){
}
}